# docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "promotions backend"
+                    "Back Promotion"
                 ],
                 "summary": "Get all promotions",
                 "parameters": [
@@ -37,6 +37,12 @@
                         "schema": {
                             "$ref": "#/definitions/model.Pagination"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -51,7 +57,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Front"
+                    "Front Auth"
                 ],
                 "summary": "Login",
                 "parameters": [
@@ -75,7 +81,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -114,7 +120,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "promotions"
+                    "Front Promotion"
                 ],
                 "summary": "Get all promotions",
                 "parameters": [
@@ -161,6 +167,12 @@
                         "schema": {
                             "$ref": "#/definitions/model.Pagination"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -175,7 +187,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Front"
+                    "Front Auth"
                 ],
                 "summary": "Register",
                 "parameters": [
@@ -195,12 +207,58 @@
                         "schema": {
                             "$ref": "#/definitions/model.Success"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/:id": {
+            "get": {
+                "description": "User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Front User"
+                ],
+                "summary": "get user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "main.ping": {
             "type": "object",
             "properties": {
@@ -224,15 +282,6 @@
                     "type": "string",
                     "maxLength": 30,
                     "minLength": 6
-                }
-            }
-        },
-        "model.Error": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "error"
                 }
             }
         },
